crates/typechecker/tests/snapshots/fixture_test__generic_function.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
Some: forall f. fn(f) -> Option<f>
None: forall f. Option<f>
map_option: forall w x. fn(Option<w>, fn(w) -> x) -> Option<x>
